[package]
name = "markdown-scanner"
version = "1.2.0"
edition = "2021"
license-file="LICENSE"
keywords = ["markdown", "sql", "server", "notes"]
categories = ["command-line-utilities"]
description= "A tool to scan Markdown files and store metadata in a SQLite db, with client-server and local support."
readme = "README.md"
exclude = ["cheat sheet.md", "markdown-processor-all-rust.bash", ".github/*"]

[dependencies]
# Core dependencies
rusqlite = { version = "0.31", features = ["bundled"] }
regex = { version = "1.10", features = ["unicode"] }
yaml-rust = "0.4"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
jwalk = "0.8.1" # For local filesystem scanning

# Networking dependencies
tokio = { version = "1.36", features = ["full"] }
axum = "0.7.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower-http = { version = "0.5.2", features = ["cors"] }

[dev-dependencies]
tempfile = "3"
hyper-util = { version = "0.1.3", features = ["full"] }
tokio-test = "0.4.3"


[profile.release]
panic = "abort"
opt-level = "z"
codegen-units = 1
lto = "fat"
debug = false
strip = "symbols"
