[package]
name = "markdown-scanner"
version = "1.0.4"
edition = "2021"
license-file="LICENSE"
keywords = ["markdown", "sql"]
categories = ["command-line-utilities"]
description= " markdown-scanner is a Rust-based command-line tool designed to scan Markdown files within a specified directory in sqlite db."
readme = "README.md"
exclude = ["cheat sheet.md", "markdown-processor-all-rust.bash", ".github/*"]
repository = "https://github.com/andrenaP/markdown-scanner"

[dependencies]
rusqlite = { version = "0.29", features = ["bundled"] }
regex = { version = "1.10", features = ["unicode"] }
yaml-rust = "0.4"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
jwalk = "0.8.1"

log = "0.4"
env_logger = "0.10"

serde_json = "1.0"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
opt-level = "z"
codegen-units = 1
lto = "fat"
debug = false
strip = "symbols"
